--- a/config.yml
+++ b/config.yml
@@ -3,6 +3,7 @@
 Token: "ODQ2NzM3NzQwOTI5NTY0Njcy.YKz3-Q.w-pf29MtNdXDjb0GwKtPHGk4hnM"
 Guild-IDs: [825894722324922438, 928845819392716840]
 Global-Slash-Commands: False # Enabling this will override Guild-IDs
+OpenAI-Key: "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"
 
 EmbedColors:
   Default: 0xFF4400
@@ -147,6 +148,17 @@ Embeds:
     description: "**%joke%**"
     color: DEFAULT
     timestamp: true
+  Year:
+    title: "Woo! Prepare the party poppers! 🎉"
+    description: "There are **%days% days, %hours% hours, %minutes% minutes** and **%seconds% seconds** until **%next-year%**! 🎆"
+    color: DEFAULT
+    timestamp: true
+  Choose:
+    title: "I choose:"
+    description: "```%chosen%```"
+    color: DEFAULT
+    footer:
+      text: "I chose this out of %number% options!"
 
 # MESSAGES CONFIGURATION
 
@@ -163,3 +175,4 @@ Messages:
         "HAHAHAHA no", "get out with that begging bullcrap"
     ]
   HighLow-HowItWorks: '__**This game is provably fair.**__ \n**What that means is that there is no way the bot can cheat you by picking a number that is in its favour.** \n \nThe way this works is that the secret is calculated using 3 parameters - the server seed, client seed and the modifier. Out of these, we show you the SHA256 hash of the server seed. You can also change the client seed if you wish by executing `/highlow <amount> [<client-seed>]`. It defaults to your user ID if it is not specified. The modifier is a SHA1 hash of the current timestamp to milliseconds. The server seed is the only part that is kept a secret until after the roll. \n \nThen, after you roll, you can check this page again, we will show you the server seed that was used for your secret. You can then verify this by using the following method which we use to calculate your secret. \n \n**How are high-low rolls calculated?** \n1. The hint is calculated by using a simple randomizer that chooses a random number between `1` and `100`. \n2. Two strings are created: \n> `STRING1 = "[MODIFIER]:[SERVER SEED]:[MODIFIER]"` \n> `STRING2 = "[MODIFIER]:[CLIENT SEED]:[MODIFIER]"` \n3. Then `HMAC-SHA512` is used to hash `STRING1` with `STRING2` as the secret key, giving us a `128` character hex string. \n4. The first `8` characters of the hex string are taken and converted to a decimal. \n5. This decimal is then divided by `42949672.95` and rounded off to the nearest whole number. \n6. This whole number is used as the secret, with the maximum possible value being `100`. \n \n*(( If you do not know what hashes are, they are basically complex algorithms that encode a value, and it is irreversible. ))*'
+  Choose-Not-Enough-Options: "You must provide more than 2 options to choose from!"
